# internal/entities/refresh.go
@@ -1,0 +1,5 @@
+package entities
+
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token" validate:"required" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"`
+}
